extends Node2D

func _on_pink_button_pressed() -> void:
	print("Botão rosa funcionando!")

func _on_green_button_pressed() -> void:
	print("Botão verde funcionando!")

func _on_white_button_pressed() -> void:
	print("Botão branco funcionando!")

func _on_left_arrow_button_pressed() -> void:
	print("Seta esquerda funcionando!")

func _on_right_arrow_button_pressed() -> void:
	print("Seta direita funcionando!")
